--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class = "heading">
       <!--container1: 3 frogs stacked, h1 frog has a sub-container-->
-      <h1>Apple Pie</h1> <!--this is another sub-container with background cover image-->>
+      <h1>Apple Pie</h1> <!--this is another sub-container with background cover image-->
       <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your favorites as well!
       </p>
       <img src = '../apple-pie/images/recipe-info.png' alt: "Recipe summary">
